fix(abc:sv): fix detail misalignment when content include block
- close https://github.com/ng-alain/ng-alain/issues/1055

--- a/packages/abc/ellipsis/style/index.less
+++ b/packages/abc/ellipsis/style/index.less
@@ -1,7 +1,7 @@
 @import '../../../theme/styles/default.less';
 
 ellipsis {
-  display: inline-block;
+  display: inline;
 }
 
 .ellipsis {
